# LeadGen

./: .env.example  .gitignore  app.py  discover_osm_batch.py  discover_query.py  discovery.py  env_loader.py  firecrawl_fetch.py  lead_csv.py  main.py  prompts.py  providers.py  pyproject.toml  requirements.txt  run_leads.py  signals.py  verify_openai.py  web_app.py
.cursor/plans/: minimal_lead-gen_script_9db27bd3.plan.md
examples/: accuracy-rubric.md  leads.csv  verify_smoke.csv
static/: app.js  style.css
templates/: index.html
tests/: test_discover_auto.py  test_discover_query.py  test_env_loader.py  test_fetch_homepage.py  test_firecrawl_fetch.py  test_lead_csv.py  test_run_leads_evidence.py  test_signals.py
