# Vercel reads this for Python deps; Flask entry is main.py or app.py at repo root.
# https://vercel.com/docs/frameworks/backend/flask

[project]
name = "leadgen"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "flask>=3.0.0",
]
